# NyarchTourQT

./: MANIFEST.in  install.sh  moe.nyarchlinux.tourqt.desktop  moe.nyarchlinux.tourqt.json  moe.nyarchlinux.tourqt.metainfo.xml  pyproject.toml
src/moe.nyarchlinux.tourqt.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/nyarchtourqt/: __init__.py  pages_model.py  utils.py
