[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moe.nyarchlinux.tourqt"
version = "0.1.0"
description = "Nyarch Tour - A KDE Kirigami tour application for Nyarch Linux"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
authors = [
  { name = "Nyarch Linux" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Environment :: X11 Applications :: Qt",
  "Intended Audience :: End Users/Desktop"
]
dependencies = [
  "PySide6>=6.6.0"
]

[project.scripts]
nyarchtourqt = "nyarchtourqt.app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nyarchtourqt = ["qml/*.qml", "pictures/*.png", "pictures/*.svg", "pictures/*.webp"]

[tool.setuptools.data-files]
"share/applications" = ["moe.nyarchlinux.tourqt.desktop"]
"share/metainfo" = ["moe.nyarchlinux.tourqt.metainfo.xml"]
"share/icons/hicolor/scalable/apps" = ["moe.nyarchlinux.tourqt.svg"]
